--- a/resources/META-INF/plugin.xml
+++ b/resources/META-INF/plugin.xml
@@ -23,7 +23,7 @@
 
     <extensions defaultExtensionNs="com.intellij">
         <!-- Add your extensions here -->
-        <treeStructureProvider implementation="com.oic.plugin.multidimens.extensions.TextOnlyTreeStructureProvider"/>
+        <!--<treeStructureProvider implementation="com.oic.plugin.multidimens.extensions.TextOnlyTreeStructureProvider"/>-->
     </extensions>
 
     <application-components>
@@ -49,26 +49,26 @@
 
     <actions>
         <!-- Add your actions here -->
-        <action id="3421" class="com.oic.plugin.multidimens.PasteAction" text="Paste Dimens"
-                description="Paste Dimens">
-            <add-to-group group-id="EditorPopupMenu" anchor="after" relative-to-action="PasteMultiple"/>
-            <add-to-group group-id="ConsoleView.PopupMenu" anchor="after" relative-to-action="ConsoleView.Copy"/>
-            <add-to-group group-id="EditorActions" anchor="first"/>
-            <keyboard-shortcut keymap="$default" first-keystroke="ctrl shift D"/>
-        </action>
+        <!--<action id="3421" class="com.oic.plugin.multidimens.sample.PasteAction" text="Paste Dimens"-->
+                <!--description="Paste Dimens">-->
+            <!--<add-to-group group-id="EditorPopupMenu" anchor="after" relative-to-action="PasteMultiple"/>-->
+            <!--<add-to-group group-id="ConsoleView.PopupMenu" anchor="after" relative-to-action="ConsoleView.Copy"/>-->
+            <!--<add-to-group group-id="EditorActions" anchor="first"/>-->
+            <!--<keyboard-shortcut keymap="$default" first-keystroke="ctrl shift D"/>-->
+        <!--</action>-->
 
-        <group id="MyPlugin.SampleMenu" text="_Sample Menu" description="Sample Menu">
-            <add-to-group group-id="MainMenu" anchor="last"/>
-            <action class="com.oic.plugin.multidimens.TextBoxes" id="MyPlugin.Textboxes" text="Text _Boxes"
-                    description="A test menu item"/>
-            <action class="com.oic.plugin.multidimens.MyShowDialog" id="MyPlugin.Dialogs" text="Text _Dialog"
-                    description="A test menu item"/>
-        </group>
+        <!--<group id="MyPlugin.SampleMenu" text="_Sample Menu" description="Sample Menu">-->
+            <!--<add-to-group group-id="MainMenu" anchor="last"/>-->
+            <!--<action class="com.oic.plugin.multidimens.sample.TextBoxes" id="MyPlugin.Textboxes" text="Text _Boxes"-->
+                    <!--description="A test menu item"/>-->
+            <!--<action class="com.oic.plugin.multidimens.sample.MyShowDialog" id="MyPlugin.Dialogs" text="Text _Dialog"-->
+                    <!--description="A test menu item"/>-->
+        <!--</group>-->
 
-        <action id="EditorBasics.EditorIllustration" class="com.oic.plugin.multidimens.action.EditorIllustration"
-                text="Editor Basics" description="Illustrates how to plug an action in">
-            <add-to-group group-id="EditorPopupMenu" anchor="last"/>
-        </action>
+        <!--<action id="EditorBasics.EditorIllustration" class="com.oic.plugin.multidimens.sample.EditorIllustration"-->
+                <!--text="Editor Basics" description="Illustrates how to plug an action in">-->
+            <!--<add-to-group group-id="EditorPopupMenu" anchor="last"/>-->
+        <!--</action>-->
 
         <action id="OicPlugin.GenerateDimensions" class="com.oic.plugin.multidimens.action.MakeMultiDimenAction"
                 text="Generate Multi Dimension" description="Generate multi dimensions values">
